--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <!--==================== CSS ====================-->
     <link rel="stylesheet" href="./packages/css/styles.css">
 
+    <link rel="icon" href="/packages/images/ProfileDribbble.png" type="image/x-icon">
+
     <title>Rafi Ardinata Riskiansyah</title>
 </head>
 
