--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!--==================== HEADER ====================-->
     <header class="header" id="header">
         <nav class="nav container">
-            <a href="#" class="nav__logo">Rafi Ardinata Riskiansyah</a>
+            <a href="#home" class="nav__logo">Rafi Ardinata Riskiansyah</a>
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list grid">
                     <li class="nav__item">
