--- a/index.html
+++ b/index.html
@@ -154,10 +154,10 @@
                             Telkom University Surabaya.
                         </a>Domisili saya di Kota Sidoarjo.
                     </p>
-                    <p class="about__description">
+                    <!-- <p class="about__description">
                         Kesibukan selain kuliah, saya mengelola bisnis yaitu menjual minuman segar yang bernama
                         <strong>S'Quw</strong>
-                    </p>
+                    </p> -->
                     <div class="about__info">
                         <div>
                             <span class="about__info-title">02+</span>
