--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
                         <a href="https://wa.me/6281252896841" target="_blank" class="home__social-icon">
                             <i class="uil uil-whatsapp-alt"></i>
                         </a>
-                        <!-- <a href="https://discord.gg/rafiardinata" target="_blank" class="home__social-icon">
-                                <i class="uil uil-discord"></i>
-                            </a> -->
+                        <a href="https://dribbble.com/rafiardinata" target="_blank" class="home__social-icon">
+                                <i class="uil uil-dribbble"></i>
+                            </a>
                     </div>
 
                     <div class="home__img">
