--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                             <div class="skills__data">
                                 <div class="skills__titles">
                                     <h3 class="skills__name">Adobe Photoshop</h3>
-                                    <span class="skills__number">90%</span>
+                                    <span class="skills__number">95%</span>
                                 </div>
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__photoshop"></span>
@@ -973,6 +973,9 @@
                     </a>
                     <a href="https://wa.me/6281252896841" target="_blank" class="footer__social">
                         <i class="uil uil-whatsapp-alt"></i>
+                    </a>
+                    <a href="https://dribbble.com/rafiardinata" target="_blank" class="footer__social">
+                        <i class="uil uil-dribbble"></i>
                     </a>
                 </div>
             </div>
