--- a/index.html
+++ b/index.html
@@ -666,10 +666,10 @@
                             <h3 class="portfolio__title">Web Blogger</h3>
                             <p class="portfolio__description">AOTSITES adalah platform blogging yang memudahkan untuk
                                 berbagi ide, tutorial, dan pengetahuan dengan desain.</p>
-                            <a href="#" class="button button--flex button--small portfolio__button">
+                            <!-- <a href="#" class="button button--flex button--small portfolio__button">
                                 Details
                                 <i class="uil uil-arrow-right button__icon"></i>
-                            </a>
+                            </a> -->
                         </div>
                     </div>
 
@@ -683,10 +683,10 @@
                             <p class="portfolio__description">Platform Tambakku menyediakan berbagai produk hasil tambak
                                 dan website ini dibuat dengan menggunakan Framework Laravel.
                             </p>
-                            <a href="#" class="button button--flex button--small portfolio__button">
+                            <!-- <a href="#" class="button button--flex button--small portfolio__button">
                                 Details
                                 <i class="uil uil-arrow-right button__icon"></i>
-                            </a>
+                            </a> -->
                         </div>
                     </div>
 
@@ -700,10 +700,10 @@
                             <p class="portfolio__description">ModernDashoard adalah solusi dashboard canggih yang
                                 dirancang
                                 untuk memberikan wawasan mendalam dan real-time mengenai kinerja bisnis.</p>
-                            <a href="#" class="button button--flex button--small portfolio__button">
+                            <!-- <a href="#" class="button button--flex button--small portfolio__button">
                                 Details
                                 <i class="uil uil-arrow-right button__icon"></i>
-                            </a>
+                            </a> -->
                         </div>
                     </div>
 
@@ -716,10 +716,10 @@
                             <h3 class="portfolio__title">Program Sistem Keuangan</h3>
                             <p class="portfolio__description">CRUD Sistem Keuangan adalah solusi sistem keuangan
                                 terintegrasi yang dirancang untuk memudahkan pengelolaan keuangan bisnis.</p>
-                            <a href="#" class="button button--flex button--small portfolio__button">
+                            <!-- <a href="#" class="button button--flex button--small portfolio__button">
                                 Details
                                 <i class="uil uil-arrow-right button__icon"></i>
-                            </a>
+                            </a> -->
                         </div>
                     </div>
 
@@ -732,10 +732,10 @@
                             <h3 class="portfolio__title">Portfolio Modern Web</h3>
                             <p class="portfolio__description">PortFoli adalah platform web yang dirancang untuk
                                 menampilkan karya dan pencapaian Anda dengan elegan dan profesional.</p>
-                            <a href="#" class="button button--flex button--small portfolio__button">
+                            <!-- <a href="#" class="button button--flex button--small portfolio__button">
                                 Details
                                 <i class="uil uil-arrow-right button__icon"></i>
-                            </a>
+                            </a> -->
                         </div>
                     </div>
 
